Bug 145416 - Object animation - Emphasis - Spin: When rotated to 90°, bitmap object disappears (FreeBSD & Linux)
Summary: Object animation - Emphasis - Spin: When rotated to 90°, bitmap object disapp...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: x86-64 (AMD64) FreeBSD
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:7.5.0 target:7.4.4
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Object-Animations
  Show dependency treegraph
 
Reported: 2021-10-30 19:18 UTC by JBrown
Modified: 2022-11-17 12:56 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
An example of wrong work (29.50 KB, application/vnd.oasis.opendocument.presentation)
2021-10-30 19:18 UTC, JBrown
Details

Note You need to log in before you can comment on or make changes to this bug.
Description JBrown 2021-10-30 19:18:15 UTC
Created attachment 176029 [details]
An example of wrong work

At the end of the effect:

Vector object (SVG, Draw):
0 < Angle of rotation < 90: Lines become thinner
Angle of rotation = 90: The object disappears completely 

Graphic object (PNG):
Angle of rotation = 90: The object disappears completely 

Steps to Reproduce:
Details are in the attachment




Version: 7.1.2.2 / LibreOffice Community
Build ID: 10(Build:2)
CPU threads: 2; OS: FreeBSD 12.2; UI render: default; VCL: qt5+cairo
Locale: ru-RU (ru_RU.UTF-8); UI: ru-RU
Calc: threaded
Comment 1 Mike Kaganski 2021-10-30 19:59:30 UTC
No repro using Version: 7.2.2.2 (x64) / LibreOffice Community
Build ID: 02b2acce88a210515b4a5bb2e46cbfb63fe97d56
CPU threads: 12; OS: Windows 10.0 Build 19043; UI render: default; VCL: win
Locale: ru-RU (ru_RU); UI: en-US
Calc: threaded
Comment 2 Jan-Marek Glogowski 2021-10-31 09:51:51 UTC
No repro on:

Version: 7.3.0.0.alpha1+ / LibreOffice Community
Build ID: 3b4192faadb11f41f6d63d5f9a796a836d01ded1
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: qt5 (cairo+xcb)
Locale: de-DE (de_DE.UTF-8); UI: en-US
Calc: threaded

Please check if 7.1.6 is fixed. I guess at least 7.2.2 is fixed, as it doesn't seem to be OS related.
Comment 3 JBrown 2021-11-03 17:14:59 UTC
Version: 7.2.1.2 / LibreOffice Community
Build ID: 20(Build:2)
CPU threads: 2; OS: FreeBSD 12.2; UI render: default; VCL: qt5 (cairo+xcb)
Locale: ru-RU (ru_RU.UTF-8); UI: en-US
Calc: threaded

Vector images rotate correctly. Bitmap disappears (as it was). I am not able to check version 7.3 yet.
Comment 4 Buovjaga 2022-11-09 15:29:04 UTC
No repro. Can you still see the problem with 7.4?

Set to NEEDINFO.
Change back to UNCONFIRMED, if the problem persists. Change to RESOLVED WORKSFORME, if the problem went away.

Arch Linux 64-bit
Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: b57307e8f3553fcb292c9c11fcf58bcef3a6cb3c
CPU threads: 8; OS: Linux 6.0; UI render: default; VCL: gtk3
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded
Built on 8 November 2022
Comment 5 JBrown 2022-11-09 17:35:49 UTC
I can't test for version 7.4 yet.

On version 7.3 there is no problem with the vector image, but the bitmap still disappears when rotated 90 degrees.

Version: 7.3.5.2 / LibreOffice Community
Build ID: 30(Build:2)
CPU threads: 2; OS: FreeBSD 13.1; UI render: default; VCL: qt5 (cairo+xcb)
Locale: ru-RU (ru_RU.UTF-8); UI: ru-RU
Calc: threaded
Comment 6 JBrown 2022-11-09 17:50:59 UTC
Tested on Arch Linux: vector images rotate correctly, bitmap disappeared again when rotated 90 degrees.

Version: 7.4.2.3 / LibreOffice Community
Build ID: 40(Build:3)
CPU threads: 2; OS: Linux 6.0; UI render: default; VCL: gtk3
Locale: ru-RU (ru_RU.UTF-8); UI: en-US
7.4.2-2
Calc: threaded
Comment 7 Buovjaga 2022-11-09 19:16:58 UTC
Sorry, I tested carelessly. Indeed, the third slide shows the disappearance problem (all VCL backends on Linux). The problem is not seen on Windows.

I tested with the 50max Linux bibisect repository (in an Ubuntu 14.04 VM) and the problem is not yet seen. Unfortunately I can't test my usual Linux bibisect repos on my workstation due to some annoying library mismatch that just appeared.

Arch Linux 64-bit
Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: b57307e8f3553fcb292c9c11fcf58bcef3a6cb3c
CPU threads: 8; OS: Linux 6.0; UI render: default; VCL: gtk3
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded
Built on 8 November 2022
Comment 8 Stéphane Guillou (stragu) 2022-11-10 09:01:09 UTC
Removing Qt5 meta, adding animation meta. Renaming bug according to more recent tests (thinning of lines is gone, disappearing raster image is still an issue).

Not reproduced in:

Version: 6.3.6.2
Build ID: 2196df99b074d8a661f4036fca8fa0cbfa33a497
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3; 
Locale: en-AU (en_AU.UTF-8); UI-Language: en-US
Calc: threaded

Reproduced in:

Version: 7.1.8.1 / LibreOffice Community
Build ID: e1f30c802c3269a1d052614453f260e49458c82c
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded
Comment 9 Buovjaga 2022-11-12 16:24:23 UTC
Bibisected with bibisect-linux-64-7.1 to
https://git.libreoffice.org/core/commit/78036f74fa74ee2552e79064660634e1342692ff
tdf#135094 cairo canvas: fix black slide containing a very small image
Comment 10 Commit Notification 2022-11-15 08:57:44 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/94df17d2fcdb72bc529097d77b174d934a25cc24

tdf#145416 canvas: fix rotated, not zero-sized bitmap, which is not rendered

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2022-11-17 10:34:24 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/8dd85649df19a2570d79336809f0c03ce2339729

tdf#145416 canvas: fix rotated, not zero-sized bitmap, which is not rendered

It will be available in 7.4.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Stéphane Guillou (stragu) 2022-11-17 12:56:48 UTC
Verified fixed in:

Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: a81e957f5026373f3935390c786c21416fc74fcc
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Thanks Miklos!